[package]
name = "yajl-ffi-test-suite"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
yajl-clib = { workspace = true }
libc = { workspace = true }

[features]
default = []
nightly = []

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
rstest = "0.23.0"
