[package]
name = "yajl"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

nightly = []

[dependencies]
libc = { workspace = true }
strtod = { git = "https://github.com/kod-kristoff/strtod", version = "0.0.1" }

[lib]
doctest = false

[dev-dependencies]
anyhow = "1.0.92"
insta = { version = "1.41.1", features = ["yaml"] }
rstest = "0.23.0"
